basic route and db

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "latest",
     "express": "^4.14.1",
-    "body-parser": "latest"
+    "lodash": "^4.17.4"
   },
   "devDependencies": {},
   "scripts": {
